<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white">

    <TextView
        android:id="@+id/title"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_page_title_top"
        android:text="@string/title_into"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_main_16"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                style="@style/PlaceholderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_field_background"
                android:hint="@string/input_phone_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/margin_main_16"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSurnameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main_16"
            android:background="@null"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSurname"
                style="@style/PlaceholderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_field_background"
                android:hint="@string/input_phone_surname"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/margin_main_16"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPhoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main_16"
            android:background="@null"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPhoneNumber"
                style="@style/PlaceholderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_field_background"
                android:hint="@string/input_phone_number"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:padding="@dimen/margin_main_16"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonInter"
            style="@style/ButtonText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main_32"
            android:background="@drawable/button_big_background"
            android:text="@string/button_inter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

    </LinearLayout>

    <TextView
        android:id="@+id/notice2"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main_2"
        android:textColor="@color/gray"
        android:text="@string/notice_policy"
        app:layout_constraintBottom_toTopOf="@id/notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notice"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main_2"
        android:text="@string/notice_link"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>